Listes - retrait du style des dl ;

--- a/public/index.html
+++ b/public/index.html
@@ -363,17 +363,21 @@
             <!-- liste -->
             <h2 id="liste">Liste</h2>
             <qc-doc-exemple caption="Exemple de liste simple">
-            <ul>
-                <li>Élément de liste 1</li>
-                <li>Élément de liste 2</li>
-                <li>Élément de liste 3
-                    <ul>
-                        <li>Élément de liste 3.1</li>
-                        <li>Élément de liste 3.2</li>
-                    </ul>
-                </li>
-                <li>Élément de liste 4</li>
-            </ul>
+            <p>Lorem ipsum dolor sit amet
+                <ul>
+                    <li>Élément de liste 1</li>
+                    <li>Élément de liste 2</li>
+                    <li>Élément de liste 3
+                        <ul>
+                            <li>Élément de liste 3.1</li>
+                            <li>Élément de liste 3.2</li>
+                        </ul>
+                    </li>
+                    <li>Élément de liste 4</li>
+                </ul>
+            </p>
+
+            <p>Lorem ipsum dolor sit amet</p>
             </qc-doc-exemple>
 
             <hr />
