Doc - retouche des styles des tables

--- a/public/index.html
+++ b/public/index.html
@@ -766,6 +766,12 @@
                     </thead>
                     <tbody>
                     <tr>
+                        <td>Tout attribut</td>
+                        <td>na</td>
+                        <td>na</td>
+                        <td>Tout attribut sera ajouté au champ texte du composant, en particulier les attributs <code>name</code> et <code>value</code>. De cette façon, l'ajout de <code>qc-search-bar</code> à un formulaire se programme de la même façon qu'un champ de type recherche.</code></value></code></td>
+                    </tr>
+                    <tr>
                         <td>submit-value</td>
                         <td>Texte</td>
                         <td>Chaine vide</td>
