--- a/public/index.html
+++ b/public/index.html
@@ -766,22 +766,34 @@
                     </thead>
                     <tbody>
                     <tr>
-                        <td>Tout attribut</td>
-                        <td>na</td>
-                        <td>na</td>
-                        <td>Tout attribut sera ajouté au champ texte du composant, en particulier les attributs <code>name</code> et <code>value</code>. De cette façon, l'ajout de <code>qc-search-bar</code> à un formulaire se programme de la même façon qu'un champ de type recherche.</code></value></code></td>
+                        <td>name</td>
+                        <td>Texte</td>
+                        <td>q</td>
+                        <td>Nom du champs dans le formulaire</td>
                     </tr>
                     <tr>
-                        <td>submit-value</td>
+                        <td>value</td>
                         <td>Texte</td>
                         <td>Chaine vide</td>
-                        <td>Valeur du bouton submit</td>
+                        <td>Valeur du champs dans le formulaire</td>
                     </tr>
                     <tr>
-                        <td>submit-name</td>
+                        <td>input-*</td>
+                        <td>na</td>
+                        <td>na</td>
+                        <td>Tout attribut commençant par <code>input-</code> sera ajouté au champ texte du composant.</td>
+                    </tr>
+                    <tr>
+                        <td>submit-aria-label</td>
                         <td>Texte</td>
-                        <td>Chaine vide</td>
-                        <td>Nom du bouton submit</td>
+                        <td>Lancer la recherche/Submit search</td>
+                        <td>Valeur de l’attribut aria-label du bouton</td>
+                    </tr>
+                    <tr>
+                        <td>submit-*</td>
+                        <td>na</td>
+                        <td>na</td>
+                        <td>Tout attribut commençant par <code>input-</code> sera ajouté au bouton du composant. Utile par exemple pour lui donner un nom et une valeur.</td>
                     </tr>
                     <tr>
                         <td>piv-background</td>
@@ -795,6 +807,9 @@
 
             <h3>Zone d'ajout de contenu HTML</h3>
             <p>Aucune zone d'ajout de contenu n'est définie pour ce composant</p>
+
+            <h3>Précision concernant le DOM d’ombre (Shadow dom)</h3>
+            <p>Ce composant ne contient pas de DOM d'ombre.</p>
 
             <!-- PIV -->
             <h2 id="piv">Composants du PIV</h2>
