Avis - modification pour permettre l'ajout du titre dans le slot + ménage des classes + sortie des derniers élément de css dans le composant

--- a/public/index.html
+++ b/public/index.html
@@ -653,11 +653,16 @@
 
 
             <qc-doc-exemple id="exemple-avis-avertissement"
-                    caption="Exemple d’avertissement"
+                    caption="Exemple d’avertissement (avec et sans <i><code>slot</code></i>)"
             >
                 <qc-notice type="warning"
-                           title="Migration des contenus"
+                           title="Migration des <i>contenus</i>"
                            content="Les contenus seront transférés dans Québec.ca à partir du 16 février et le site sera fermé le 20 avril.">
+                </qc-notice>
+
+                <qc-notice type="warning">
+                    <h2>Migration des <i>contenus</i></h2>
+                    <p>Les contenus seront transférés dans Québec.ca à partir du 16 février et le site sera fermé le 20 avril.</p>
                 </qc-notice>
             </qc-doc-exemple>
 
