Qc-Notice - ajout d'un attribut manquant dans le code

--- a/public/index.html
+++ b/public/index.html
@@ -1179,7 +1179,7 @@
             </table>
             </p>
 
-            <qc-alert>Les images du pied de page PIV doivent respecter <qc-external-link><a href="https://www.piv.gouv.qc.ca/fileadmin/documents/guide/section1_general.pdf">les normes graphiques du système d’identification visuel.</a></qc-external-link></qc-alert>
+            <qc-notice>Les images du pied de page PIV doivent respecter <qc-external-link><a href="https://www.piv.gouv.qc.ca/fileadmin/documents/guide/section1_general.pdf">les normes graphiques du système d’identification visuel.</a></qc-external-link></qc-notice>
 
             <h5>Zones d'ajout de contenu HTML</h5>
 
