Bandeau PIV - ajustement de la taille de police + ajustement de l'exemple + image de base identique à celle du pied de page (qui est celle du site PIV)

--- a/public/index.html
+++ b/public/index.html
@@ -864,7 +864,7 @@
                            caption="Exemple de personnalisation des liens du bandeau d’entête PIV"
             >
                 <qc-piv-header
-                               title-text="Gouvernement du Québec"
+                               title-text="Nom du site"
                                title-url="https://www.quebec.ca/"
                                alt-logo="Accédez à Québec.ca"
                 >
