Liens externes - modification pour que l'image s'adapte à la taille de police.

--- a/public/index.html
+++ b/public/index.html
@@ -346,11 +346,21 @@
 
             <h4>Exemples</h4>
 
-            <qc-doc-exemple  caption="Exemple de lien externe.">
-                <p>Voici un exemple de <qc-external-link
-                    ><a href="http://www.external.domain.com/">lien externe assez long (Réduire la taille de l’écran pour constater l’espace insécable devant l’icone de lien externe)</a
-                    ></qc-external-link>, avec du texte à la suite.
+            <qc-doc-exemple  caption="Exemple de lien externe avec différentes tailles de police. Réduire la fenêtre pour constater que l’icône ne se sépare pas du lien au passage à la ligne.">
+                <p class="qc-font-size-xl">
+                    Lorem ipsum <qc-external-link><a href="http://www.external.domain.com/">Lorem ipsum dolor sit amet, consectetur adipiscing i</a></qc-external-link> elit
                 </p>
+                <p class="qc-font-size-lg">
+                    Lorem ipsum <qc-external-link><a href="http://www.external.domain.com/">Lorem ipsum dolor sit amet, consectetur adipiscing i</a></qc-external-link> elit
+                </p>
+                <p class="qc-font-size-md">
+                    Lorem ipsum <qc-external-link><a href="http://www.external.domain.com/">Lorem ipsum dolor sit amet, consectetur adipiscing i</a></qc-external-link> elit
+                </p>
+                <p class="qc-font-size-sm">
+                    Lorem ipsum <qc-external-link><a href="http://www.external.domain.com/">Lorem ipsum dolor sit amet, consectetur adipiscing </a></qc-external-link> elit
+                </p>
+
+
             </qc-doc-exemple>
 
             <h4>Attributs</h4>
