Pied de page PIV - modification des marges, uniquement appliqué au :host (qc-piv-footer) (sinon elles ne fusionnent pas sont donc doublées

--- a/public/index.html
+++ b/public/index.html
@@ -378,8 +378,12 @@
                     <tr>
                         <td>img-alt</td>
                         <td>Texte</td>
-                        <td><dt>Français</dt><dd>Ce lien dirige vers un autre site.</dd>
-                            <dt>Anglais</dt><dd>This link directs to another site.</dd></td>
+                        <td>
+                            <dl>
+                                <dt>Français</dt><dd>Ce lien dirige vers un autre site.</dd>
+                                <dt>Anglais</dt><dd>This link directs to another site.</dd>
+                            </dl>
+                        </td>
                         <td>Texte alternatif de l’image du lien externe.</td>
                     </tr>
                 </tbody>
@@ -1154,8 +1158,10 @@
                     <td>logo-alt</td>
                     <td>Texte</td>
                     <td>
-                        <dt>Français</dt><dd>Logo du gouvernement du Québec</dd>
-                        <dt>Anglais</dt><dd>Logo of government of Québec</dd>
+                        <dl>
+                            <dt>Français</dt><dd>Logo du gouvernement du Québec</dd>
+                            <dt>Anglais</dt><dd>Logo of government of Québec</dd>
+                        </dl>
                     </td>
                     <td>Texte alternatif du logo pour les lecteurs d'écran</td>
                 </tr>
@@ -1181,7 +1187,7 @@
                     <td>copyright-url</td>
                     <td>Adresse</td>
                     <td>
-                        <dl class="qc-list-inline">
+                        <dl>
                             <dt>Français</dt><dd>https://www.quebec.ca/droit-auteur</dd>
                             <dt>Anglais</dt><dd>https://www.quebec.ca/en/copyright</dd>
                         </dl>
