Liens externe - ajout de la couleur du lien à l'icône

--- a/public/index.html
+++ b/public/index.html
@@ -336,8 +336,19 @@
                     <dd><a href="javascript:;" class="pseudo-active">Règlement de pêche dans la zone 21.</a></dd>
                     <dt>Lien interne visité (pseudo-classe :visited)</dt>
                     <dd><a href="javascript:;" class="pseudo-visited">Règlement de pêche dans la zone 21.</a></dd>
+                    <dt>Lien externe</dt>
+                    <dd><qc-external-link><a href="javascript:;" class="not-visited">Lien externe</a></qc-external-link></dd>
+                    <dt>Lien au survol (pseudo-classe :hover)</dt>
+                    <dd><qc-external-link><a href="javascript:;" class="pseudo-hover">Lien externe</a></qc-external-link></dd>
+                    <dt>Lien interne au focus (pseudo-classe :focus)</dt>
+                    <dd><qc-external-link><a href="javascript:;" class="pseudo-focus">Lien externe</a></qc-external-link></dd>
+                    <dt>Lien interne au clic (pseudo-classe :active)</dt>
+                    <dd><qc-external-link><a href="javascript:;" class="pseudo-active">Lien externe</a></qc-external-link></dd>
+                    <dt>Lien interne visité (pseudo-classe :visited)</dt>
+                    <dd><qc-external-link><a href="javascript:;" class="pseudo-visited">Lien externe</a></qc-external-link></dd>
                 </dl>
             </qc-doc-exemple>
+
 
             <h3>Lien externe (qc-external-link)</h3>
 
