--- a/public/index.html
+++ b/public/index.html
@@ -327,24 +327,20 @@
             <qc-doc-exemple caption="Exemple de différents liens hypertexte selon leurs états.">
                 <dl>
                     <dt>Lien interne</dt>
-                    <dd><a href="javascript:;" class="not-visited">Règlement de pêche dans la zone 21.</a></dd>
-                    <dt>Lien au survol (pseudo-classe :hover)</dt>
-                    <dd><a href="javascript:;" class="pseudo-hover">Règlement de pêche dans la zone 21.</a></dd>
-                    <dt>Lien interne au focus (pseudo-classe :focus)</dt>
-                    <dd><a href="javascript:;" class="pseudo-focus">Règlement de pêche dans la zone 21.</a></dd>
-                    <dt>Lien interne au clic (pseudo-classe :active)</dt>
-                    <dd><a href="javascript:;" class="pseudo-active">Règlement de pêche dans la zone 21.</a></dd>
-                    <dt>Lien interne visité (pseudo-classe :visited)</dt>
-                    <dd><a href="javascript:;" class="pseudo-visited">Règlement de pêche dans la zone 21.</a></dd>
-                    <dt>Lien externe</dt>
+                    <dd><a href="javascript:;" class="not-visited">Lien interne</a></dd>
                     <dd><qc-external-link><a href="javascript:;" class="not-visited">Lien externe</a></qc-external-link></dd>
+
                     <dt>Lien au survol (pseudo-classe :hover)</dt>
+                    <dd><a href="javascript:;" class="pseudo-hover">Lien interne</a></dd>
                     <dd><qc-external-link><a href="javascript:;" class="pseudo-hover">Lien externe</a></qc-external-link></dd>
-                    <dt>Lien interne au focus (pseudo-classe :focus)</dt>
+                    <dt>Lien  au focus (pseudo-classe :focus)</dt>
+                    <dd><a href="javascript:;" class="pseudo-focus">Lien interne</a></dd>
                     <dd><qc-external-link><a href="javascript:;" class="pseudo-focus">Lien externe</a></qc-external-link></dd>
-                    <dt>Lien interne au clic (pseudo-classe :active)</dt>
+                    <dt>Lien  au clic (pseudo-classe :active)</dt>
+                    <dd><a href="javascript:;" class="pseudo-active">Lien interne</a></dd>
                     <dd><qc-external-link><a href="javascript:;" class="pseudo-active">Lien externe</a></qc-external-link></dd>
-                    <dt>Lien interne visité (pseudo-classe :visited)</dt>
+                    <dt>Lien  visité (pseudo-classe :visited)</dt>
+                    <dd><a href="javascript:;" class="pseudo-visited">Lien interne</a></dd>
                     <dd><qc-external-link><a href="javascript:;" class="pseudo-visited">Lien externe</a></qc-external-link></dd>
                 </dl>
             </qc-doc-exemple>
