index.html - correction d'overflow pour les tables

--- a/public/index.html
+++ b/public/index.html
@@ -371,7 +371,7 @@
             </qc-doc-exemple>
 
             <h4>Attributs</h4>
-
+            <div class="table-overflow">
             <table class="qc-table qc-striped component-attributes-description">
                 <thead>
                 <tr>
@@ -395,6 +395,7 @@
                     </tr>
                 </tbody>
             </table>
+            </div>
             <hr />
 
             <!-- liste -->
@@ -1178,78 +1179,78 @@
             <h4>Documentation technique</h4>
 
             <h5>Attributs</h5>
-            <p class="table-overflow">
-            <table class="qc-table qc-striped component-attributes-description">
-                <thead>
-                <tr>
-                    <th>Nom</th>
-                    <th>Valeur attendue</th>
-                    <th>Valeur par défaut</th>
-                    <th>Description</th>
-                </tr>
-                </thead>
-                <tbody>
-                <tr>
-                    <td>logo-url</td>
-                    <td>Adresse du lien au clic sur l’image</td>
-                    <td>/</td>
-                    <td>Cible du lien contenant le logo</td>
-                </tr>
-                <tr>
-                    <td>logo-src</td>
-                    <td>Le chemin de l’image en thème clair.</td>
-                    <td>Le chemin vers l’image dist/img/QUEBEC_couleur.svg de la trousse</td>
-                    <td>Adresse de l'image du pied de page en thème clair (fond transparent, texte et drapeaux en couleur, voir <a href="#piv-footer-ex-2">l'exemple de pied de page PIV personnalisé</a>).</td>
-                </tr>
-                <tr>
-                    <td>logo-src-dark-theme</td>
-                    <td>Le chemin de l’image en thème sombre.</td>
-                    <td>Le chemin vers l’image dist/img/QUEBEC_blanc.svg de la trousse</td>
-                    <td>Adresse de l'image du pied de page en thème sombre  (fond transparent, texte et drapeaux en blanc, voir <a href="#piv-footer-ex-2">l'exemple de pied de page PIV personnalisé</a>).</td>
-                </tr>
-                <tr>
-                    <td>logo-alt</td>
-                    <td>Texte</td>
-                    <td>
-                        <dl>
-                            <dt>Français</dt><dd>Logo du gouvernement du Québec</dd>
-                            <dt>Anglais</dt><dd>Logo of government of Québec</dd>
-                        </dl>
-                    </td>
-                    <td>Texte alternatif du logo pour les lecteurs d'écran</td>
-                </tr>
-                <tr>
-                    <td>logo-width</td>
-                    <td>Nombre</td>
-                    <td>139</td>
-                    <td>Largeur de l’image en px</td>
-                </tr>
-                <tr>
-                    <td>logo-height</td>
-                    <td>Nombre</td>
-                    <td>35</td>
-                    <td>Hauteur de l’image en px</td>
-                </tr>
-                <tr>
-                    <td>copyright-text</td>
-                    <td>Texte</td>
-                    <td>© Gouvernement du Québec, &lt;année en cours AAAA&gt;</td>
-                    <td>Texte du lien de changement de langue</td>
-                </tr>
-                <tr>
-                    <td>copyright-url</td>
-                    <td>Adresse</td>
-                    <td>
-                        <dl>
-                            <dt>Français</dt><dd>https://www.quebec.ca/droit-auteur</dd>
-                            <dt>Anglais</dt><dd>https://www.quebec.ca/en/copyright</dd>
-                        </dl>
-                    </td>
-                    <td>L'adresse de la page du droit d'auteur sur quebec.ca</td>
-                </tr>
-                </tbody>
-            </table>
-            </p>
+            <div class="table-overflow">
+                <table class="qc-table qc-striped component-attributes-description">
+                    <thead>
+                    <tr>
+                        <th>Nom</th>
+                        <th>Valeur attendue</th>
+                        <th>Valeur par défaut</th>
+                        <th>Description</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    <tr>
+                        <td>logo-url</td>
+                        <td>Adresse du lien au clic sur l’image</td>
+                        <td>/</td>
+                        <td>Cible du lien contenant le logo</td>
+                    </tr>
+                    <tr>
+                        <td>logo-src</td>
+                        <td>Le chemin de l’image en thème clair.</td>
+                        <td>Le chemin vers l’image dist/img/QUEBEC_couleur.svg de la trousse</td>
+                        <td>Adresse de l'image du pied de page en thème clair (fond transparent, texte et drapeaux en couleur, voir <a href="#piv-footer-ex-2">l'exemple de pied de page PIV personnalisé</a>).</td>
+                    </tr>
+                    <tr>
+                        <td>logo-src-dark-theme</td>
+                        <td>Le chemin de l’image en thème sombre.</td>
+                        <td>Le chemin vers l’image dist/img/QUEBEC_blanc.svg de la trousse</td>
+                        <td>Adresse de l'image du pied de page en thème sombre  (fond transparent, texte et drapeaux en blanc, voir <a href="#piv-footer-ex-2">l'exemple de pied de page PIV personnalisé</a>).</td>
+                    </tr>
+                    <tr>
+                        <td>logo-alt</td>
+                        <td>Texte</td>
+                        <td>
+                            <dl>
+                                <dt>Français</dt><dd>Logo du gouvernement du Québec</dd>
+                                <dt>Anglais</dt><dd>Logo of government of Québec</dd>
+                            </dl>
+                        </td>
+                        <td>Texte alternatif du logo pour les lecteurs d'écran</td>
+                    </tr>
+                    <tr>
+                        <td>logo-width</td>
+                        <td>Nombre</td>
+                        <td>139</td>
+                        <td>Largeur de l’image en px</td>
+                    </tr>
+                    <tr>
+                        <td>logo-height</td>
+                        <td>Nombre</td>
+                        <td>35</td>
+                        <td>Hauteur de l’image en px</td>
+                    </tr>
+                    <tr>
+                        <td>copyright-text</td>
+                        <td>Texte</td>
+                        <td>© Gouvernement du Québec, &lt;année en cours AAAA&gt;</td>
+                        <td>Texte du lien de changement de langue</td>
+                    </tr>
+                    <tr>
+                        <td>copyright-url</td>
+                        <td>Adresse</td>
+                        <td>
+                            <dl>
+                                <dt>Français</dt><dd>https://www.quebec.ca/droit-auteur</dd>
+                                <dt>Anglais</dt><dd>https://www.quebec.ca/en/copyright</dd>
+                            </dl>
+                        </td>
+                        <td>L'adresse de la page du droit d'auteur sur quebec.ca</td>
+                    </tr>
+                    </tbody>
+                </table>
+            </div>
 
             <qc-notice type="information">Les images du pied de page PIV doivent respecter <qc-external-link><a href="https://www.piv.gouv.qc.ca/fileadmin/documents/guide/section1_general.pdf">les normes graphiques du système d’identification visuel</a>. Nous vous invitons à privilégier le format SVG, qui permet de conserver la lisibilité de l’image en cas de zoom..</qc-external-link></qc-notice>
 
