Barre de recherche - correction d'un placeholder erroné en anglais + correction du composant (button au lieu de submit pour le préfixe des attributs du bouton de soumission)

--- a/public/index.html
+++ b/public/index.html
@@ -32,7 +32,7 @@
             <span class="qc-subhead"id="version"></span>
             Documentation technique
         </h1>
-        <nav class="main-menu"
+        <nav class="main-menu"_
              aria-label="Navigation principale">
             <h2 class="qc-h4">Bases</h2>
             <ul>
